--- a/_data/social.yml
+++ b/_data/social.yml
@@ -1,5 +1,5 @@
 - title: Email
-  url: mailto://vszhub@gmail.com
+  url: mailto://tlsdudcjf7@gmail.com
   icon: fas fa-envelope
 - title: Twitter
   url: https://twitter.com/vszhub
