--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Setup
 title: YC's Blog
-description: YC's profile, stack and experience/
+description: YC's profile, stack and experience
 url: https://yc-Shin.github.io
 avatar: /avatar.jpeg
 paginate: 5
