--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: YC's Blog
 description: YC's profile, stack and experience
 url: https://yc-Shin.github.io
-avatar: /avartar.jpg
+avatar: /avatar.jpg
 paginate: 5
 permalink: pretty
 cover_image: /bg.jpg
